在AWS上部署了windows主机，并实现了本项目的直接发布

--- a/PartyInvites/Views/Home/Index.cshtml
+++ b/PartyInvites/Views/Home/Index.cshtml
@@ -12,7 +12,10 @@
 </head>
 <body>
     <div> 
-        @ViewBag.Greeting World(View!)
+        @ViewBag.Greeting World(from the view)
+        <p>We're going to have an exciting party.<br />
+        (To do:sell it better.Add pictures or something.)
+        </p>
     </div>
 </body>
 </html>
