--- a/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -9,6 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
     <title>RsvpForm</title>
 </head>
 <body>
