--- a/PartyInvites/Views/Home/Index.cshtml
+++ b/PartyInvites/Views/Home/Index.cshtml
@@ -1,49 +1,8 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/_BasicLayout.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-    <meta charset="utf-8" />
-    <title>@ViewBag.title</title>
-
-    <meta name="description" content="RsvpForm" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- basic styles -->
-    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
-
-    <!--[if IE 7]>
-      <link href="~/Content/css/font-awesome-ie7.min.css" rel="stylesheet" />
-    <![endif]-->
-    <!-- page specific plugin styles -->
-    <!-- fonts -->
-
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
-
-    <!-- ace styles -->
-    <link href="~/Content/css/ace.min.css" rel="stylesheet" />
-    <link href="~/Content/css/ace-rtl.min.css" rel="stylesheet" />
-    <link href="~/Content/css/ace-skins.min.css" rel="stylesheet" />
-    <!--[if lte IE 8]>
-      <link href="/Content/css/ace-ie.min.css" rel="stylesheet" />
-    <![endif]-->
-    <!-- inline styles related to this page -->
-    <!-- ace settings handler -->
-
-    <script src="~/Content/js/ace-extra.min.js"></script>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="/Content/js/html5shiv.js"></script>
-    <script src="/Content/js/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
     <div class="navbar navbar-default" id="navbar">
         <script type="text/javascript">
             try { ace.settings.check('navbar', 'fixed') } catch (e) { }
@@ -2133,6 +2092,5 @@
 
         })
     </script>
-</body>
-</html>
+
 
